Web Inspector: Event Listeners section does not update when listeners are added/removed https://bugs.webkit.org/show_bug.cgi?id=170570 <rdar://problem/31501645>

Reviewed by Joseph Pecoraro.

Source/JavaScriptCore:

* inspector/protocol/DOM.json:
Add two new events: "didAddEventListener" and "willRemoveEventListener". These events do not
contain any information about the event listeners that were added/removed. They serve more
as indications that something has changed, and to refetch the data again via `getEventListenersForNode`.

Source/WebCore:

Test: inspector/dom/event-listener-add-remove.html

* dom/EventTarget.cpp:
(WebCore::EventTarget::setAttributeEventListener):
Fire willRemoveEventListener/didAddEventListener events when an attribute event listener is
replaced by another event listener.

* inspector/InspectorDOMAgent.h:
* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::didAddEventListener):
(WebCore::InspectorDOMAgent::willRemoveEventListener):
Dispatch an event to the inspector frontend whenever an event listener is added/removed.

* inspector/InspectorInstrumentation.cpp:
(WebCore::InspectorInstrumentation::didAddEventListenerImpl):
(WebCore::InspectorInstrumentation::willRemoveEventListenerImpl):
Tie into existing instrumentation points for adding/removing event listeners.

Source/WebInspectorUI:

* UserInterface/Protocol/DOMObserver.js:
(WI.DOMObserver.prototype.didAddEventListener):
(WI.DOMObserver.prototype.willRemoveEventListener):

* UserInterface/Controllers/DOMTreeManager.js:
(WI.DOMTreeManager.prototype.didAddEventListener):
(WI.DOMTreeManager.prototype.willRemoveEventListener):

* UserInterface/Models/DOMNode.js:
Add "EventListenersChanged" event. Fired when an event listener is added or removed.

* UserInterface/Views/DOMNodeDetailsSidebarPanel.js:
(WI.DOMNodeDetailsSidebarPanel.prototype.addEventListeners):
(WI.DOMNodeDetailsSidebarPanel.prototype.removeEventListeners):
(WI.DOMNodeDetailsSidebarPanel.prototype._eventListenersChanged):
Refresh the event listeners section whenever a node's event listeners change.

LayoutTests:

* inspector/dom/event-listener-add-remove-expected.txt: Added.
* inspector/dom/event-listener-add-remove.html: Added.


Canonical link: https://commits.webkit.org/193336@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222002 268f45cc-cd09-0410-ab3c-d52691b4dbfc